# proto-uv-monorepo

./: .gitignore  .mise.toml  Makefile  README.md  build_all.sh  configure_dependencies.sh  package-lock.json  run_all.sh
api-1/: Dockerfile  README.md  build.sh  main.py  pyproject.toml  pyproject.toml.old  run.sh
api-1/app/: main.py
api-1/app/dto/: task_dto.py
api-1/app/model/: task_model.py
api-1/app/services/: task_service.py
api-2/: .dockerignore  .python-version  README.md  build.sh  pyproject.toml  run.sh
api-2/app/: main.py
api-2/app/services/: number_service.py
python-packages/package_poc/: pyproject.toml
python-packages/package_poc/src/: stuff.py
python-packages/package_poc/src/package_poc.egg-info/: PKG-INFO  SOURCES.txt
ui/: .dockerignore  Dockerfile-build  Dockerfile-deploy  README.md  angular.json  build.sh  package-lock.json  package.json
ui/src/app/: app.routes.ts  number.service.ts  task.service.ts
ui/src/app/dto/: random-number.ts
ui/src/app/task-list/: task-list.component.ts
